--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.38.4",
     "express": "^4.21.2",
     "express-request-id": "^3.0.0",
     "http-errors": "^2.0.0",
+    "pg": "^8.13.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
@@ -33,6 +36,8 @@
     "@types/express": "^5.0.0",
     "@types/express-request-id": "^1.4.3",
     "@types/node": "^22.10.7",
+    "@types/pg": "^8.11.10",
+    "drizzle-kit": "^0.30.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
