--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
     "@eslint/js": "^9.18.0",
-    "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/express-request-id": "^1.4.3",
@@ -40,6 +39,7 @@
     "drizzle-kit": "^0.30.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.2",
     "eslint-plugin-unused-imports": "^4.1.4",
     "husky": "^9.1.7",
