--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "drizzle-orm": "^0.38.4",
     "express": "^4.21.2",
     "express-request-id": "^3.0.0",
+    "express-session": "^1.18.1",
     "http-errors": "^2.0.0",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.13.1",
     "zod": "^3.24.1"
   },
@@ -38,7 +41,10 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/express-request-id": "^1.4.3",
+    "@types/express-session": "^1.18.1",
     "@types/node": "^22.10.7",
+    "@types/passport": "^1.0.17",
+    "@types/passport-local": "^1.0.38",
     "@types/pg": "^8.11.10",
     "drizzle-kit": "^0.30.2",
     "eslint": "^9.18.0",
